started a chat ui concept

--- a/Experiments/Ty/chat_screen/ios/Runner/Info.plist
+++ b/Experiments/Ty/chat_screen/ios/Runner/Info.plist
@@ -11,7 +11,7 @@
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
-	<string>map_grid_test</string>
+	<string>chat_screen</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
