--- a/Experiments/Ty/chat_screen/pubspec.yaml
+++ b/Experiments/Ty/chat_screen/pubspec.yaml
@@ -1,4 +1,4 @@
-name: map_grid_test
+name: chat_screen
 description: A new Flutter project.
 
 # The following defines the version and build number for your application.
