--- a/BackEnd/springboot_backend/src/main/resources/application.properties
+++ b/BackEnd/springboot_backend/src/main/resources/application.properties
@@ -1,1 +1,13 @@
+spring.profiles.active=dev
 
+spring.datasource.url=jdbc:mysql://localhost/yt2game
+spring.datasource.username=db_user
+spring.datasource.password=db_pass
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+## Hibernate Properties
+# The SQL dialect makes Hibernate generate better SQL for the chosen database
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
+
+# Hibernate ddl auto (create, create-drop, validate, update)
+spring.jpa.hibernate.ddl-auto = update
