--- a/BackEnd/springboot_backend/src/main/resources/application.properties
+++ b/BackEnd/springboot_backend/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.profiles.active=dev
 
 spring.datasource.url=jdbc:mysql://localhost/yt2game
-spring.datasource.username=db_user
-spring.datasource.password=db_pass
+spring.datasource.username=anthony
+spring.datasource.password=TESTPASS
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 ## Hibernate Properties
