--- a/BackEnd/springboot_backend/.gitignore
+++ b/BackEnd/springboot_backend/.gitignore
@@ -32,4 +32,4 @@ build/
 /src/main/resources/application-dev.properties
 
 ### USER ADDED ###
-src/resources/application.properties
+src/main/resources/*
