--- a/BackEnd/springboot_backend/src/main/resources/application.properties
+++ b/BackEnd/springboot_backend/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.profiles.active=dev
 
 spring.datasource.url=jdbc:mysql://localhost/yt2game
 spring.datasource.username=anthony
-spring.datasource.password=TESTPASS
+spring.datasource.password=hello?AnyoneOutThere?
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 ## Hibernate Properties
