Added chatroom functionality to flutter end. Currently has dummy text entering through futures.

--- a/BackEnd/springboot_backend/.gitignore
+++ b/BackEnd/springboot_backend/.gitignore
@@ -29,7 +29,6 @@ build/
 
 ### VS Code ###
 .vscode/
-/src/main/resources/application-dev.properties
 
-### USER ADDED ###
-src/main/resources/*
+### app dev properties ###
+/src/main/resources/application-dev.properties
