--- a/FrontEnd/risk/pubspec.yaml
+++ b/FrontEnd/risk/pubspec.yaml
@@ -21,12 +21,16 @@ dependencies:
     sdk: flutter
   gradient_text: ^1.0.2
   dio: ^3.0.0
+  intl: ^0.16.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
 
 dev_dependencies:
+  build_runner:
+  freezed: ^0.1.3+1
+  json_serializable: ^3.2.5
   flutter_test:
     sdk: flutter
 
