--- a/FrontEnd/risk/pubspec.yaml
+++ b/FrontEnd/risk/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   gradient_text: ^1.0.2
   dio: ^3.0.0
   intl: ^0.16.1
+  web_socket_channel: ^1.1.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
