--- a/FrontEnd/risk/pubspec.yaml
+++ b/FrontEnd/risk/pubspec.yaml
@@ -33,6 +33,8 @@ dev_dependencies:
   build_runner:
   freezed: ^0.1.3+1
   json_serializable: ^3.2.5
+  bidirectional_scroll_view:
+  zoom_widget:
   flutter_test:
     sdk: flutter
 
