finalized flow for demo1

--- a/BackEnd/springboot_backend/src/main/resources/application.properties
+++ b/BackEnd/springboot_backend/src/main/resources/application.properties
@@ -3,8 +3,8 @@ spring.profiles.active=dev
 
 
 spring.datasource.url=jdbc:mysql://localhost/yt2game
-spring.datasource.username=localhostUsername
-spring.datasource.password=localhostPassword
+spring.datasource.username=YT2_Server
+spring.datasource.password=JS>A>~-m4
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 ## Hibernate Properties
