--- a/FrontEnd/risk/ios/Runner/Info.plist
+++ b/FrontEnd/risk/ios/Runner/Info.plist
@@ -41,5 +41,18 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>CFBundleURLTypes</key>
+    <array>
+        <dict>
+            <key>CFBundleTypeRole</key>
+            <string>Editor</string>
+            <key>CFBundleURLSchemes</key>
+            <array>
+                <!-- TODO Replace this value: -->
+                <!-- Copied from GoogleServices-Info.plist key REVERSE_CLIENT_ID -->
+    <string>com.googleusercontent.apps.99174920925-d0g5raem57m3isv8a1vej13a96256u6a</string>
+            </array>
+        </dict>
+    </array>
 </dict>
 </plist>
