--- a/FrontEnd/risk/pubspec.yaml
+++ b/FrontEnd/risk/pubspec.yaml
@@ -19,11 +19,16 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  gradient_text: ^1.0.2
+  #backend
   dio: ^3.0.0
   intl: ^0.16.1
   web_socket_channel: ^1.1.0
   get_it: ^3.1.0
+  google_sign_in: ^3.0.4
+  
+  #frontend
+  fluttertoast: ^3.1.3
+  gradient_text: ^1.0.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
