--- a/BackEnd/springboot_backend/pom.xml
+++ b/BackEnd/springboot_backend/pom.xml
@@ -97,7 +97,7 @@
 				<executions>
 					<execution>
 						<goals>
-							<goal>repackage</goal>
+							<goal>run</goal>
 						</goals>
 					</execution>
 				</executions>
