--- a/BackEnd/springboot_backend/src/main/resources/application.properties
+++ b/BackEnd/springboot_backend/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.profiles.active=dev
 
 spring.datasource.url=jdbc:mysql://localhost/YT2Game
 spring.datasource.username=YT2_Server
-spring.datasource.password=JS>A>~-m4
+spring.datasource.password=Js>A>5~-m4
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 ## Hibernate Properties
