--- a/BackEnd/springboot_backend/.gitignore
+++ b/BackEnd/springboot_backend/.gitignore
@@ -31,4 +31,4 @@ build/
 .vscode/
 
 ### app dev properties ###
-/src/main/resources/application-dev.properties
+/src/main/resources/application.dev.properties
