--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -30,11 +30,11 @@ maven-test:
  tags:
  - shell
  script:
- - cd Spring
+ - cd BackEnd/springboot_backend/
  - mvn test
  artifacts:
   paths:
-  - Spring/target/*.jar
+  - BackEnd/springboot_backend/target/*.jar
 
 # Below stage builds, deploys and executes the jar as service.
 # Make sure there is /target directory in your server, else script will fail, or use any
