--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -40,7 +40,7 @@ maven-test:
 # Make sure there is /target directory in your server, else script will fail, or use any
 # other folder you like.
 # If you are changing the folder, reflect the change in systemd-web-demo service
-autoDeploy:
+auto-deploy:
  stage: autodeploy
  tags:
  - shell
@@ -59,7 +59,7 @@ autoDeploy:
 
 
 #pickup step 7
-autoDeploy:
+auto-deploy:
  stage: autodeploy
  tags:
  - shell
