--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,10 +4,7 @@
 stages:
  - mavenbuild
  - maventest
- - teststage
  - autodeploy
- - androidbuild
- - androidtest
 
 # tags: "shell" should match with the tag name provided to runner, for spring runner
 # should execute in shell.
@@ -38,8 +35,8 @@ maven-test:
   - BackEnd/springboot_backend/target/*.jar
   
   
-test-stage:
- stage: teststage
+auto-deploy:
+ stage: autodeploy
  tags:
  - shell
  script:
