--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -35,7 +35,7 @@ maven-test:
   - BackEnd/springboot_backend/target/*.jar
   
   
-auto-deploy:
+deploy-automatically:
  stage: deployautomatically
  tags:
  - shell
