--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -90,9 +90,8 @@ auto-deploy3:
 # Ensure the tag matches with the tag created for Android runner
 # Android runner should have docker as executor.
 android-build:
- image: 
-  javiersantos/android-ci: latest 
-  stage: androidbuild
+ image: javiersantos/android-ci:latest 
+ stage: androidbuild
  before_script:
   - export GRADLE_USER_HOME=`pwd`/.gradle
  tags:
