--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -94,6 +94,7 @@ android-build:
  stage: androidbuild
  before_script:
   - export GRADLE_USER_HOME=`pwd`/.gradle
+  - chmod +x ./Android_test/gradlew
  tags:
   - android
  script:
