--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,18 +1,9 @@
-# Stages of pipeline, should match with stage tag inside each job.
-# Each stages executes in sequence, if previous job fails, then all the preceeding jobs
-# are skipped.
 stages:
  - mavenbuild
  - maventest
  - autodeploy
- - flutterbuild
- - andrioidtest
+ - fluttertest
 
-# tags: "shell" should match with the tag name provided to runner, for spring runner
-# should execute in shell.
-# Notice that in petclinic project, the spring project is in root of master, if yours is in
-# folder then cd to that folder.
-# maven -B means batch mode (i.e. not interactive)
 maven-build:
  stage: mavenbuild
  tags:
@@ -21,10 +12,6 @@ maven-build:
  - cd BackEnd/springboot_backend/
  - mvn package -B
 
-# artifacts are created when job executes successfully, and can be manually
-# downloaded from GitLab GUI.
-# artifacts are not mandatory, but it is good practice, in case auto deploy fails, you
-# can manually download the jar.
 maven-test:
  stage: maventest
  tags:
@@ -36,31 +23,23 @@ maven-test:
   paths:
   - BackEnd/springboot_backend/target/*.jar
 
-# Below stage builds, deploys and executes the jar as service.
-# Make sure there is /target directory in your server, else script will fail, or use any
-# other folder you like.
-# If you are changing the folder, reflect the change in systemd-web-demo service
 auto-deploy2:
  stage: autodeploy
  tags:
  - shell
  script:
- - cd FrontEnd/risk/
- - flutter test
-
-# To build android projects
-# Notice that we cd into Android_test folder which contains all Android files before
-# building apk.
-# Begin step 5 (android runner) script here.
+ - cd BackEnd/springboot_backend/
+ - mvn package
+ - sudo mv target/*.jar /target/web-demo.jar
+ - sudo systemctl stop web-demo
+ - sudo systemctl start web-demo
 
 
-
-#pickup step 7
 auto-deploy3:
  stage: autodeploy
  tags:
  - shell
- only: # Will only run if these conditions are met, check documentation for more!
+ only: 
   refs:
   - master
   variables:
@@ -73,20 +52,12 @@ auto-deploy3:
  - sudo systemctl start web-demo
  
 
-# To build android projects
-# Notice that we cd into Android_test folder which contains all Android files before # building apk.
-# Ensure the tag matches with the tag created for Android runner
-# Android runner should have docker as executor.
-flutter-build:
- stage: androidbuild
+flutter-test:
+ stage: fluttertest
  before_script:
-  - 
  tags:
-  - android
+  - flutter
  script:
-  - cd /FrontEnd/risk/android/
-  - gradle assemble
- artifacts:
-  paths:
-  - /build/outputs/
+  - cd /FrontEnd/risk/
+  - flutter test
 
