--- a/BackEnd/springboot_backend/pom.xml
+++ b/BackEnd/springboot_backend/pom.xml
@@ -84,6 +84,12 @@
 			<artifactId>kotlin-stdlib-jdk8</artifactId>
 			<version>1.3.61</version>
 		</dependency>
+
+		<dependency>
+			<groupId>com.ea.async</groupId>
+			<artifactId>ea-async</artifactId>
+			<version>1.2.3</version>
+		</dependency>
 	</dependencies>
 
 	<build>
@@ -94,6 +100,20 @@
 				<configuration>
 					<executable>true</executable>
 				</configuration>
+			</plugin>
+
+			<plugin>
+				<groupId>com.ea.async</groupId>
+				<artifactId>ea-async-maven-plugin</artifactId>
+				<version>1.2.3</version>
+				<executions>
+					<execution>
+						<goals>
+							<goal>instrument</goal>
+							<goal>instrument-test</goal>
+						</goals>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 	</build>
