--- a/FrontEnd/risk/pubspec.yaml
+++ b/FrontEnd/risk/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   web_socket_channel: ^1.1.0
   get_it: ^3.1.0
   google_sign_in: ^3.0.4
+  json_annotation: ^3.0.1
   
   #frontend
   fluttertoast: ^3.1.3
