--- a/FrontEnd/risk/pubspec.yaml
+++ b/FrontEnd/risk/pubspec.yaml
@@ -36,9 +36,10 @@ dependencies:
   cupertino_icons: ^0.1.2
 
 dev_dependencies:
-  build_runner:
+  build_runner: ^1.8.0
   freezed: ^0.1.3+1
   json_serializable: ^3.2.5
+  mockito: ^4.1.1
   flutter_test:
     sdk: flutter
 
