--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -66,8 +66,9 @@ flutter-test:
 flutter-build:
  stage: flutterbuild
  before_script:
+ - export ANDROID_HOME=/home/gitlab-runner/android-sdk/
  - export PATH=$PATH:/home/gitlab-runner/flutter/flutter/bin/
- - flutter config --android-sdk /home/gitlab-runner/android-sdk 
+ - export PATH=%PATH%;%ANDROID_HOME%\tools;%ANDROID_HOME%\platform-tools
  tags:
  - flutter
  script:
