-add a keystore for the app, -update build.gradle to use keystore

--- a/FrontEnd/risk/android/app/build.gradle
+++ b/FrontEnd/risk/android/app/build.gradle
@@ -46,7 +46,22 @@ android {
         versionName flutterVersionName
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
-
+    signingConfigs {
+        // It's not necessary to specify, but I like to keep the debug keystore
+        // in SCM so all our debug builds (on all workstations) use the same
+        // key for convenience
+        debug {
+            storeFile file("../../debug")
+            keyAlias "debug"
+            keyPassword "android"
+        }
+        release {
+            storeFile file("release.keystore")
+            storePassword "myPassword"
+            keyAlias "myAlias"
+            keyPassword "Something...."
+        }
+    }
     buildTypes {
         release {
             // TODO: Add your own signing config for the release build.
