--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -73,6 +73,6 @@ flutter-build:
  - flutter
  script:
  - cd FrontEnd/risk
- - flutter clean && flutter build apk -debug
+ - flutter pub get && flutter clean && flutter build apk -debug
  - sudo mv build/app/outputs/apk/release/app-release.apk /target/app.apk
 
