--- a/BackEnd/springboot_backend/pom.xml
+++ b/BackEnd/springboot_backend/pom.xml
@@ -73,6 +73,13 @@
 			<artifactId>gson</artifactId>
 			<version>2.8.6</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.json/json -->
+		<dependency>
+			<groupId>org.json</groupId>
+			<artifactId>json</artifactId>
+			<version>20190722</version>
+		</dependency>
+
 
 		<dependency>
 			<groupId>org.hibernate.javax.persistence</groupId>
