--- a/BackEnd/springboot_backend/src/main/resources/application.properties
+++ b/BackEnd/springboot_backend/src/main/resources/application.properties
@@ -5,10 +5,16 @@ spring.datasource.username=YT2_Server
 spring.datasource.password=Js>A>5~-m4
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+# increase size of tomcat max input for websocket
+server.tomcat.websocket.textBufferSize=20000
+org.apache.tomcat.websocket.textBufferSize=20000
+
+
+server.port=8080
+
 ## Hibernate Properties
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
-
 
 # Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto = update
