--- a/FrontEnd/risk/pubspec.yaml
+++ b/FrontEnd/risk/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   #frontend
   fluttertoast: ^4.0.0
   gradient_text: ^1.0.2
+  diagonal_scrollview: ^0.1.0
 
   cupertino_icons: ^0.1.2
 
